# PGA-Analysis

./: README.md  pyproject.toml
Data/Courses/: augusta_generic.csv  augusta_national.csv
Data/Players/processed/: course_fit_augusta_masters.csv  course_fit_bomber_ballstriking_riviera.csv  course_fit_bomber_friendly_modern.csv  course_fit_classic_ballstriker.csv  course_fit_penal_driving_us_open_style.csv  course_fit_pga_ballstriker_major.csv  course_fit_short_positional_strategy.csv  course_fit_stadium_desert_scottsdale.csv  course_fit_water_target_tpc.csv  course_fit_wedge_birdiefest.csv  course_fit_wind_links_open.csv  master_player_stats.csv  (+13 more)
Data/Tournaments/: schedule_2025.csv
legacy_src/src_legacy/: analysis_rollback.py  build_master_ratings.py  config.py  course_fit.py  hole_sim.py  player_leaderboards.py  run_tournament.py  tournament_sim_ratings.py
notebooks/: build_master_table.ipynb  player_talent_engine.ipynb
notebooks/TournamentAnalysis/: TournamentReportTemplate.ipynb  riviera_2025_analysis.ipynb  wmphoenix_2025_analysis.ipynb
notes/: Development.md  Project_Goals.md  Simulation.md
src/: __init__.py  build_master_ratings.py  course_fit_engine.py  data_loader.py  master_table.py  merge_raw_stats.py  player_stats.py  player_talent_engine.py  tournament_sim_coursefit.py
src/golf_model/: __init__.py  course_fit.py  data_loader.py  pipeline.py  simulation.py  talent_estimation.py  verify_data_files.py
src/pga_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/src/: load_data.py  players.py
tools/: run_talent_engine.py
(+16 files in other folders)
